# NFP_ocr_rosneft

./: .env.example  .gitignore  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  pyproject.toml  readme.md  requirements.txt  АО.json  АО_пример.json
app/: main.py  settings.py
app/api/: __init__.py  documents.py  packages.py
app/examples/: _bitai.py  _bitai_tool_calling.py  _bitai_tool_calling_httpx.py  _bitai_tool_calling_litellm.py  _tool_calling_local_qwen.py
app/llm/: __init__.py
app/logic/: documents.py  packages.py
app/ocr/: surya.py
app/prompts/: workflow.md
app/prompts/schemas/: Expense.json  Report.json
app/readers/: img.py
app/schemas/: documents.py  report.py
scripts/: _dump_schemas.py  local_qwen.py
tests/: huggingface.py
