[project]
name = "rosneft"
version = "0.1.0"
description = ""
authors = [
    {name = "Софья Кравченко",email = "svkravchenko@1cbit.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic (==2.12.5)",
    "fastapi (>=0.136.0,<0.137.0)",
    "transformers (==4.57.6)",
    "surya-ocr (>=0.17.1,<0.18.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "deepagents (>=0.5.3,<0.6.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "text-generation (>=0.7.0,<0.8.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "numexpr (>=2.14.1,<3.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "bitsandbytes (>=0.49.2,<0.50.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pdftext (>=0.6.3,<0.7.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "openai (>=2.33.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
